--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,8 +20,8 @@ main:
   - title: "Blog Posts"
     url: /year-archive/
     
-  - title: "CV"
-    url: /cv/
+  - title: "简历"
+    url: /简历/
     
   - title: "Guide"
     url: /markdown/
